# xx

./: .env.example  .env.production  .gitignore  BATTLE_SYSTEM_UPGRADE_SUMMARY.md  BUG_FIX_REPORT.md  CHANGELOG.md  CHINESE_COMMANDS.md  COMMANDS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DEVELOPMENT_SUMMARY.md  FEATURE_COMPLETENESS_REPORT.md  FIX_SUMMARY_20251126.md  GAME_DATA_COMPLETION_REPORT.md  INDEX.md  INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_HEALTH_CHECK_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOYMENT_GUIDE.md  QUICK_FIX.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  REFINERY_SYSTEM_SUMMARY.md  SECT_SHORT_TERM_FEATURES_SUMMARY.md  SECT_SYSTEM_SUMMARY.md  SOLUTION_SUMMARY.md  SYSTEM_SUMMARY.md  TESTING_GUIDE.md  add_all_command_handlers.sh  add_auto_delete_messages.sh  add_auto_delete_v2.sh  (+45 more)
data/: DATA_IMPORT_REPORT.md  fix_monsters_final.py  fix_monsters_proper.py  fix_monsters_sql.py  import_all_data.sh  init_credit_shop.sql  init_equipment_sets.sql  init_items_equipment.sql  init_monsters.sql  init_monsters_fixed.sql  init_refinery_materials.sql  init_refinery_recipes.sql  init_secret_realms.sql  init_sect_cultivation_methods.sql  init_sect_quests.sql  init_sect_shop.sql  init_skills.sql  init_skills_new.sql  init_spirit_beasts.sql  init_world_boss_templates.sql  rebuild_monsters_sql.py  regenerate_skills.py  unify_monsters_sql.py
docs/: ALCHEMY_SYSTEM_DESIGN.md  (+20 more)
(+135 files in other folders)
